web模块代码重构